--- a/contact.html
+++ b/contact.html
@@ -86,14 +86,17 @@
 				<div class="row justify-content-center">
 					<div class="col-md-12">
 						<div class="wrapper">
-							<div class="row mb-5">
+							<div class="row mb-2">
 								<div class="col-md-3">
 									<div class="dbox w-100 text-center">
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<span class="fa fa-map-marker"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+					            <p><span>Address:</span>Near Devamatha Hospital 
+									Koothattukulam P.O
+									Koothattukulam
+									Kerala </p>
 					          </div>
 				          </div>
 								</div>
@@ -103,7 +106,7 @@
 				        			<span class="fa fa-phone"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+					            <p><span>Phone:</span> <a href="tel://1234567920">+91 7510623538</a></p>
 					          </div>
 				          </div>
 								</div>
@@ -113,20 +116,11 @@
 				        			<span class="fa fa-paper-plane"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+					            <p><span>Email:</span> <a href="mailto:info@careonwheels.com">info@careonwheels.com</a></p>
 					          </div>
 				          </div>
 								</div>
-								<div class="col-md-3">
-									<div class="dbox w-100 text-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-globe"></span>
-				        		</div>
-				        		<div class="text">
-					            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-					          </div>
-				          </div>
-								</div>
+								
 							</div>
 							<div class="row no-gutters">
 								<div class="col-md-7">
