--- a/services.html
+++ b/services.html
@@ -91,8 +91,30 @@
 	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your.</p>
 	            <p><a href="#" class="btn btn-primary py-3 px-4">Get a Quote</a></p>
 	          </div>
-    			</div>
-    			<div class="col-lg-9 services-wrap px-4 pt-5">
+				</div>
+				<div class="contact_container">
+                    <div class="card">
+                            <img src="./images/Ajay.jpg" style="height: 50%;width:100%;">
+                            <h1 class="contact_name">Dummy Text</h1>
+                            <p class="title">Hub Student Representative Kochi Hub</p>
+                            <a href="mailto:ajay19philip1512@ieee.org" target="blank"><button>Go to</button></a>
+                    </div>
+                    <div class="card">
+                            <img src="./images/vishnu.jpeg" style="height: 50%;width:100%;">
+                            <h1 class="contact_name">Dummy Text</h1>
+                            <p class="title">Chairmain IEEE SB SJCET</p>
+                            <button>Go to</button>
+                    </div>
+                    <div class="card">
+                            <img src="./images/Sreehari.jpg" style="height: 50%;width:100%;">
+                            <h1 class="contact_name">Dummy Text</h1>
+                            <p class="title">Membership Development Coordinator</p>
+                            <button>Go to</button>
+                    </div>
+                
+				</div>
+
+    			<!-- <div class="col-lg-9 services-wrap px-4 pt-5">
     				<div class="row pt-md-3">
     					<div class="col-md-4 d-flex align-items-stretch">
 		    				<div class="services text-center">
@@ -131,7 +153,7 @@
 		    				</div>
 		    			</div>
     				</div>
-    			</div>
+    			</div> -->
     		</div>
     	</div>
     </section>
